--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
